--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html,body{
 .container{
   position: relative;
   width: 400px;
-  background: #111;
+  background: #5b2020;
   padding: 20px 30px;
   border: 1px solid #444;
   border-radius: 5px;
