--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ html,body{
   height: 100%;
   place-items: center;
   text-align: center;
-  background: #e2e2e2;
+  background: #ffe600;
 }
 
 .container{
   position: relative;
   width: 400px;
-  background: #d63237;
+  background: #e2e2e2;
   padding: 20px 30px;
   border: 1px solid #444;
   border-radius: 5px;
