--- a/style.css
+++ b/style.css
@@ -10,13 +10,12 @@ html,body{
   height: 100%;
   place-items: center;
   text-align: center;
-  background: #ffe600;
+  background: #000;
 }
-
 .container{
   position: relative;
   width: 400px;
-  background: #e2e2e2;
+  background: #111;
   padding: 20px 30px;
   border: 1px solid #444;
   border-radius: 5px;
@@ -30,7 +29,7 @@ html,body{
 }
 .container .text{
   font-size: 25px;
-  color: #e2e2e2;
+  color: #666;
   font-weight: 500;
 }
 .container .edit{
@@ -38,7 +37,7 @@ html,body{
   right: 10px;
   top: 5px;
   font-size: 16px;
-  color: #e2e2e2;
+  color: #666;
   font-weight: 500;
   cursor: pointer;
 }
@@ -48,7 +47,6 @@ html,body{
 .container .star-widget input{
   display: none;
 }
-
 .star-widget label{
   font-size: 40px;
   color: #444;
@@ -56,13 +54,6 @@ html,body{
   float: right;
   transition: all 0.2s ease;
 }
-
-.star-widget p{
-    color: #e2e2e2;
-    font-weight: 600;
-    font-size: 30px;
-}
-
 input:not(:checked) ~ label:hover,
 input:not(:checked) ~ label:hover ~ label{
   color: #fd4;
@@ -70,97 +61,25 @@ input:not(:checked) ~ label:hover ~ label{
 input:checked ~ label{
   color: #fd4;
 }
-
-
-
-input#rate-5-1:checked ~ label{
+input#rate-5:checked ~ label{
   color: #fe7;
   text-shadow: 0 0 20px #952;
 }
-input#rate-5-2:checked ~ label{
-  color: #fe7;
-  text-shadow: 0 0 20px #952;
-}
-input#rate-5-3:checked ~ label{
-  color: #fe7;
-  text-shadow: 0 0 20px #952;
-}
-input#rate-5-4:checked ~ label{
-  color: #fe7;
-  text-shadow: 0 0 20px #952;
-}
-
-
-
-#rate-1-1:checked ~ form header:before{
+#rate-1:checked ~ form header:before{
   content: "I just hate it 😠";
 }
-#rate-2-1:checked ~ form header:before{
+#rate-2:checked ~ form header:before{
   content: "I don't like it 😒";
 }
-#rate-3-1:checked ~ form header:before{
+#rate-3:checked ~ form header:before{
   content: "It is awesome 😁";
 }
-#rate-4-1:checked ~ form header:before{
+#rate-4:checked ~ form header:before{
   content: "I just like it 😎";
 }
-#rate-5-1:checked ~ form header:before{
+#rate-5:checked ~ form header:before{
   content: "I just love it 😍";
 }
-
-
-#rate-1-2:checked ~ form header:before{
-  content: "I just hate it 😠";
-}
-#rate-2-2:checked ~ form header:before{
-  content: "I don't like it 😒";
-}
-#rate-3-2:checked ~ form header:before{
-  content: "It is awesome 😁";
-}
-#rate-4-2:checked ~ form header:before{
-  content: "I just like it 😎";
-}
-#rate-5-2:checked ~ form header:before{
-  content: "I just love it 😍";
-}
-
-
-#rate-1-3:checked ~ form header:before{
-  content: "I just hate it 😠";
-}
-#rate-2-3:checked ~ form header:before{
-  content: "I don't like it 😒";
-}
-#rate-3-3:checked ~ form header:before{
-  content: "It is awesome 😁";
-}
-#rate-4-3:checked ~ form header:before{
-  content: "I just like it 😎";
-}
-#rate-5-3:checked ~ form header:before{
-  content: "I just love it 😍";
-}
-
-
-#rate-1-4:checked ~ form header:before{
-  content: "I just hate it 😠";
-}
-#rate-2-4:checked ~ form header:before{
-  content: "I don't like it 😒";
-}
-#rate-3-4:checked ~ form header:before{
-  content: "It is awesome 😁";
-}
-#rate-4-4:checked ~ form header:before{
-  content: "I just like it 😎";
-}
-#rate-5-4:checked ~ form header:before{
-  content: "I just love it 😍";
-}
-
-
-
 .container form{
   display: none;
 }
@@ -205,8 +124,8 @@ form .btn button{
   width: 100%;
   border: 1px solid #444;
   outline: none;
-  background: #e2e2e2;
-  color: #222;
+  background: #222;
+  color: #999;
   font-size: 17px;
   font-weight: 500;
   text-transform: uppercase;
@@ -215,26 +134,4 @@ form .btn button{
 }
 form .btn button:hover{
   background: #1b1b1b;
-  color: #e2e2e2;
-}
-
-#final-button {
-  display: none; /* Initially hide the button */
-  background-color: #e2e2e2; /* Change the background color */
-  color: #111; /* Change the text color */
-  font-size: 18px;
-  font-weight: 600;
-  padding: 15px 25px;
-  border: none; /* Remove the border */
-  border-radius: 5px; /* Add border-radius for rounded corners */
-  cursor: pointer; /* Change cursor on hover */
-  margin-top: 10px; /* Add margin to space it from other elements */
-  padding-left: 5em;
-  padding-right: 5em;
-  white-space: nowrap;
-}
-
-#final-button:hover {
-  background-color: rgb(201, 38, 16); /* Change background color on hover */
-  color: #e2e2e2;
 }
